--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <header class="max-auto py-1 text-black flex border-[red] border-[1px]">
+        <div class="border-[red] border-[1px]">
+            <img class="h-[50px]" src="https://gmedia.playstation.com/is/image/SIEPDC/ps5-black-badge-01-en-11sep20?$400px$" alt="">
+          </div>
+          <div class="grow h-14  flex flex-center  border-[red] border-[1px] justify-center">
+            <ul class="style-none gap-5  flex  flex-center   ">
+                <li class="place-content-center">PlayStation®5</li>
+                <li class="place-content-center"> Games</li>
+                <li class="place-content-center"> Accessories</li>
+                <li class="place-content-center"> More features</li>
+                <li class="place-content-center">Entertainment</li>
+            </ul>
+          </div>
+          <div class="  flex flex-center h-14  border-[red] border-[1px] gap-5 px-5 justify-end">
+            <button class="bg-[blue] p-4 rounded-[5px] text-white">Sign In</button>
+            <i class="fa-solid fa-magnifying-glass place-content-center"></i>
+          </div>
+       
+
+    </header>
 
     
 </body>
