--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
           <div class="grow h-14  flex flex-center   justify-center">
             <ul class="style-none gap-5  flex  flex-center   ">
                 <li class="place-content-center">PlayStation®5</li>
-                <li class="place-content-center"> Games</li>
-                <li class="place-content-center"> Accessories</li>
+                <li class="place-content-center"><a href="games.html"> Games</a></li>
                 <li class="place-content-center"> More features</li>
                 <li class="place-content-center">Entertainment</li>
             </ul>
