--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <img class="h-[50px] px-5" src="https://gmedia.playstation.com/is/image/SIEPDC/ps5-black-badge-01-en-11sep20?$400px$" alt="">
           </div>
           <div class="grow h-14  flex flex-center   justify-center">
-            <ul class="style-none gap-5  flex  flex-center   ">
-                <li class="place-content-center">PlayStation®5</li>
+            <ul class="style-none gap-5  flex  flex-center  font-bold ">
+                <li class="place-content-center"><a href="index.html">PlayStation®5</a></li>
                 <li class="place-content-center"><a href="games.html"> Games</a></li>
-                <li class="place-content-center"> More features</li>
-                <li class="place-content-center">Entertainment</li>
+                <li class="place-content-center"><a href="accessories.html"> Accessories</a></li>
+                <li class="place-content-center"><a href="#">Entertainment</a></li>
             </ul>
           </div>
-          <div class="  flex flex-center    gap-5 px-5 justify-end">
-            <button class="flex  items-center bg-[blue] h-[20px] rounded-[5px] text-white ">Sign In</button>
+          <div class="  flex flex-center  gap-5 px-5 justify-end ">
+            <button class="flex  items-center place-content-center bg-[blue]  m-3 p-1 rounded-[5px] text-white font-bold">Sign In</button>
             <i class="fa-solid fa-magnifying-glass place-content-center"></i>
           </div>
        
