--- a/accessories.html
+++ b/accessories.html
@@ -19,6 +19,7 @@
                 <li class="place-content-center"><a href="games.html"> Games</a></li>
                 <li class="place-content-center"><a href="accessories.html"> Accessories</a></li>
                 <li class="place-content-center"><a href="#">Entertainment</a></li>
+                <li class="place-content-center"><a href="productPage.html">Product page</a></li>
             </ul>
           </div>
           <div class="  flex flex-center  gap-5 px-5 justify-end ">
