--- a/games.html
+++ b/games.html
@@ -90,7 +90,7 @@
 </body>
 <script>
   
-    fetch('./items.json')
+    fetch('./games.json')
           .then(function(response){
             return response.json();
 
